--- a/atm-bank/package.json
+++ b/atm-bank/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "cross-env": "^7.0.3",
+    "framer-motion": "^12.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
